--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -44,7 +44,7 @@ jobs:
         run: git status
 
       - name: Push new files to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+        uses: Platane/snk@v3
         with:
           target_branch: output
           build_dir: dist
